<resources>
    <string name="app_name">MyYapProject</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="video">Video</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="previous">Previous</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="web_client_id">784772486937-3ashjriar6bqa5d0tfhqstjogmelqcb3.apps.googleusercontent.com</string>
    <string name="password">Password</string>
    <string name="confirm_password">Password Confirmation</string>
    <string name="email">Email</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>